#11 Add Email Sending Service

--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -4,3 +4,5 @@ spring:
       on-profile: "local"
   datasource:
     url: jdbc:postgresql://localhost:5438/restaurant
+  mail:
+    host: localhost
