--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <java.version>17</java.version>
         <mapstruct.version>1.6.0.Beta1</mapstruct.version>
+        <hypersistence-utils.version>3.7.0</hypersistence-utils.version>
     </properties>
 
     <dependencies>
