--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -50,12 +50,12 @@ services:
     container_name: restaurant-mailcatcher
     restart: always
     hostname: mailcatcher
-    image: dockage/mailcatcher:0.9.0
+    image: axllent/mailpit:latest
     expose:
       - "1025"
     ports:
+      - "8025:8025"
       - "1025:1025"
-      - "1080:1080"
     networks:
       - restaurant-app
     privileged: false
